# aero-ref

./: .env  .gitignore  README.md  main.py  mcp_config.json  pyproject.toml
docs/: index.html
scripts/: airports.sql  test_bigquery_connection.py
src/aero_ref/: bigquery_server.py  flight_server.py  gcp_bigquery_client.py
